fixed issues shown at goloop deployment time